# rust-client-server-benchmarks

./: Cargo.toml  README.md  cert.crt  cert.key
examples/: quinn_client.rs  quinn_server.rs  tcp_client.rs  tcp_server.rs  tquic_client.rs  tquic_client_async_std.rs  tquic_client_native.rs  tquic_client_tokio.rs  tquic_server.rs  tquic_server_async_std.rs  tquic_server_native.rs  tquic_server_tokio.rs  udp_client.rs  udp_client_async_std.rs  udp_client_mio.rs  udp_client_monoio.rs  udp_client_tokio.rs  udp_server.rs  udp_server_async_std.rs  udp_server_mio.rs  udp_server_monoio.rs  udp_server_tokio.rs
examples/quinn_utils/: mod.rs
examples/tquic_async_std_utils/: mod.rs
examples/tquic_native_utils/: mod.rs
examples/tquic_tokio_utils/: mod.rs
