[package]
name = "tunnel-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { git = "https://github.com/quinn-rs/quinn.git", features = ["rustls"] }
quinn-proto = { git = "https://github.com/quinn-rs/quinn.git" }
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
rcgen = "0.12.0"
rustls-pemfile = "2.0.0"
