[package]
name = "tunnel-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { git = "https://github.com/quinn-rs/quinn.git", features = ["rustls"] }
quinn-proto = { git = "https://github.com/quinn-rs/quinn.git" }
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
rcgen = "0.12.0"
rustls-pemfile = "2.0.0"
tquic = "0.3.0"
bytes = "1"
log = "0.4"
mio = { version = "0.8", features = ["net", "os-poll"] }
env_logger = "0.9"
clap = { version = "=4.2.5", features = ["derive"] }
rustc-hash = "1.1"
slab = "0.4"
monoio = "0.2.1"
async-std = { version = "1.12.0", features = ["attributes"] }
async-io = "2.2.2"
